# brick_game_v2.0

./: README.md
src/: Doxyfile  Makefile
src/brick_game/snake/: apple.cc  lib_specification.cc  lib_specification.h  snake.cc  snake_logic.cc  snake_model.h
src/brick_game/snake/tests/: main_tests.cc  test_helper.cc  test_helper.h
src/brick_game/tetris/: backend.c  backend.h  def.h  fsm.c  fsm.h  lib_specification.c  lib_specification.h  score_and_time.c  score_and_time.h
src/brick_game/tetris/tests/: main_tests.check
src/documentation/: mainpage.md
src/gui/cli/: cli.c  frontend.c  frontend.h
src/gui/desktop/: CMakeLists.txt  gamefield.cc  gamefield.h  mainwindow.cc  mainwindow.h  nextfield.cc  nextfield.h  stats.cc  stats.h
